Fix to text alignment on Firefox

--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ polygon {
 
 text {
     text-anchor: middle;
-    alignment-baseline: central;
+    dominant-baseline: central;
 }
 
 .activeButton {
